# cocowork

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cocowork-core/: Cargo.toml
crates/cocowork-core/src/: error.rs  lib.rs
crates/cocowork-core/src/acp/: client_delegate.rs  connection.rs  mod.rs  protocol.rs  runtime.rs  session.rs  traits.rs  transport.rs
crates/cocowork-core/src/agent/: adapter.rs  manager.rs  mod.rs  registry.rs
crates/cocowork-core/src/sandbox/: filesystem.rs  mod.rs  permissions.rs  terminal.rs  watcher.rs
crates/cocowork-core/src/storage/: migrations.rs  mod.rs  queries.rs
crates/cocowork-core/src/types/: acp_types.rs  agent_types.rs  artifact_types.rs  mod.rs  session_types.rs  task_types.rs
crates/cocowork-ui/: Cargo.toml
crates/cocowork-ui/src/: acp_integration.rs  lib.rs  main.rs
crates/cocowork-ui/src/components/: icon.rs  mod.rs  text_input.rs
crates/cocowork-ui/src/panels/: mod.rs
crates/cocowork-ui/src/state/: app_state.rs  mod.rs  topic_tree.rs
crates/cocowork-ui/src/theme/: colors.rs  mod.rs
crates/cocowork-ui/src/views/: mod.rs
crates/cocowork-ui/src/window/: cocowork_window.rs  mod.rs
