[workspace]
resolver = "2"
members = [
    "crates/cocowork-core",
    "crates/cocowork-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["CocoWork Team"]
license = "GPL-3.0-only"
repository = "https://github.com/0xd219b/cocowork"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "io-util", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2"
walkdir = "2"
regex = "1"
dirs = "5"
base64 = "0.22"
glob = "0.3"

# Testing
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
mockall = "0.12"

# GUI (GPUI) - using a specific revision for stability
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.156.0", package = "gpui" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
